Clearfy the files and codes

--- a/popup.html
+++ b/popup.html
@@ -35,8 +35,8 @@
       <!-- <h4>Record 	&#129095;</h4>
         <h4>Record 	&#129079;</h4>
         <h4>Record 	&#11015;</h4>
-        <h4>Record 	&#129155;</h4> -->
-      <h4>Record &#129171;</h4>
+        <h4>Record 	&#129155;</h4>
+      <h4>Record &#129171;</h4> -->
       <h4 id="recordHead">Record &#129035;</h4>
       <div id="loadRecord">
         <button id="loadRecordBtn" class="btn">Load</button>
@@ -54,13 +54,15 @@
           <span>Howork, 2020</span>
           <span>Ryu Sung Chul</span>
           <a href="mailto:daka0522@gmail.com">daka0522@gmail.com</a>
+          <a href="https://github.com/daka0522/howork"
+          title="Open source of the project, howork">github.com/daka0522/howork</a>
           <span>Seoul, South Korea</span>
         </address>
       </div>
     </div>
 
     <!-- <script src="popup.js"></script> -->
-    <script src="stopwatch-self.js"></script>
+    <script src="stopwatch.js"></script>
     <script src="css_actions.js"></script>
 </body>
 </html>
