--- a/popup.html
+++ b/popup.html
@@ -49,10 +49,10 @@
     </section>
 
     <footer id="info" class="board">
-      <div id="option">
+      <!-- <div id="option">
         <span>Dark Theme</span>
         <input type="checkbox" id="themeSelector" onclick="themeChanger()">
-      </div>
+      </div> -->
       <h4>Info</h4>
       <address>
         <span>Howork, 2020</span>
