display total in given days

--- a/src/popup.html
+++ b/src/popup.html
@@ -36,11 +36,18 @@
         <h4>Stop</h4>
         <p id="stopTime" class="time"></p>
       </div>
-      
     </section>
 
     <section id="displayRecord" class="board">
       <div id="record">
+        <div id="record-total">
+          <h4>Total</h4>
+          <p id="total" class="total-sum"></p>
+          <!-- <label for="givenDay">Day</label> -->
+          <select name="givenDay" id="givenDay">
+            <option value="0">All</option>
+          </select>
+        </div>
         <div id="recordHistory">
           <!-- Javascript will generate child elements -->
         </div>
